# Narrative-Loom

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: PRD.md  TASKS.md
python/: google_api.py  pyproject.toml  replay_api_request.py  replay_result.json  requirements.txt
python/loom/: __main__.py  logger.py  server.py
python/loom/agents/: __init__.py  base.py  character.py  event.py  setting.py  style.py  technique.py
python/loom/embedding/: __init__.py  base.py  chunker.py  gemini.py  openai.py
python/loom/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openai_responses.py
python/loom/schemas/: __init__.py  card.py
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.narrative-loom/config/: agents.json  embedding.json  prompt_cards.json  providers.json  settings.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: README.md  analysis.rs  bible.rs  chapter.rs  common.rs  dedup.rs  embedding.rs  export.rs  inbox.rs  library.rs  mod.rs  search.rs  settings.rs  technique_library.rs
src-tauri/src/core/: agent.rs  bible.rs  book.rs  card.rs  embedding.rs  error.rs  evidence.rs  ids.rs  mod.rs  prompt_cards.rs  provider.rs
src-tauri/src/ingestion/: embedding_task.rs  epub_parser.rs  mod.rs  parser.rs  segmentation.rs
src-tauri/src/retrieval/: context_builder.rs  mod.rs  recall_fusion.rs  vector_search.rs
src-tauri/src/sidecar/: api_logger.rs  manager.rs  mod.rs  protocol.rs
src-tauri/src/storage/: README.md  book_db.rs  chapters.rs  config.rs  keychain.rs  library.rs  migration.rs  mod.rs  paths.rs  schema.sql  schema_vectors.sql  structured_description.rs  vectors.rs
src-tauri/tests/: entity_recall_context_integration.rs  entity_recall_metrics.rs
src-tauri/tests/fixtures/entity_recall/: metrics_fixture.json
(+60 files in other folders)
