[package]
name = "narrative-loom"
version = "0.1.0"
description = "AI-powered novel analysis and writing learning tool"
authors = ["you"]
edition = "2021"

[lib]
name = "narrative_loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"

rusqlite = { version = "0.31", features = ["bundled"] }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

directories = "5"
keyring = "2"
reqwest = { version = "0.12", features = ["json"] }

# RAG / Vector storage

# Text processing
regex = "1"

# EPUB support
epub = "2"

# Utilities
urlencoding = "2"
log = "0.4"
base64 = "0.22"

# String similarity for deduplication
strsim = "0.11"

[dev-dependencies]
tempfile = "3"
